<resources>
    <string name="app_name">Medico</string>
    <string name="update_pic">update Image</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile number</string>
    <string name="other">other</string>
    <string name="profession">Profession</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="desc">Submit</string>
</resources>