<?xml version="1.0" encoding="utf-8"?>



<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        tools:context=".MainActivity"
        >


        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/pictures" />

        <Button
            android:id="@+id/updatePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_pic"
            android:textSize="10sp"
            android:layout_toRightOf="@id/profilePic"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="140dp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePic"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="text" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Gender"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioButton11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other" />

        </RadioGroup>

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_of_birth"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dob"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="200dp"
            android:text="@string/dd_mm_yyyy"
            android:textSize="25sp"

            />

        <EditText
            android:id="@+id/profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:hint="@string/profession"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profession"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/mobile_number"
            android:hint="@string/mobile_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobileNumber"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="40dp"
            android:autofillHints="@string/address"
            android:hint="@string/address"
            android:inputType="text" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"

            android:text="@string/submit" />




    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hi, name!"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/signoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        android:layout_alignParentRight="true"
        />


    </RelativeLayout>

</ScrollView>
